Starting move to better build system scripts.
Working on simplifying ddOutput, providing function to export from ddOutputSingle, and eventually import likewise. This will slowly transition away from ddOutputSingle and ddScattMatrix and will move towards procedural programming for all pf manipulations.

Will soon move tmatrix binding code to plugin.


git-svn-id: file:///mnt/svn/rtmath@1400 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/CMakeLists.txt
+++ b/rtmath/plugins/CMakeLists.txt
@@ -47,6 +47,11 @@ if (BUILD_PLUGINS)
 	if (BUILD_PLUGIN_SILO)
 		add_subdirectory (silo)
 	endif()
+	option (BUILD_PLUGIN_TMATRIX
+		"Build Tmatrix plugin" ON)
+	if (BUILD_PLUGIN_TMATRIX)
+		add_subdirectory(tmatrix)
+	endif()
 	option (BUILD_PLUGIN_TSV
 		"Build TSV export plugin" ON)
 	if (BUILD_PLUGIN_TSV)
