The module program can now write module files. Need to: - change default location on Cygwin from /etc/modulefiles to use better detection - Better support for custom internal directives. - Better prereq/conflict specification. - Other program features (links, matching with prereq trees, ...)
git-svn-id: file:///mnt/svn/ryan-debug@67 1f4cd2ca-bd95-4731-83df-565e53d4a655

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,6 +66,7 @@ set (hdrs
 	Ryan_Debug/debug.h
 	Ryan_Debug/info.h
 	Ryan_Debug/modules.h
+	src/internal.h
 	${CMAKE_CURRENT_BINARY_DIR}/debug_subversion.h
 	)
 
