--- a/rtmath/plugins/hdf5/CMakeLists.txt
+++ b/rtmath/plugins/hdf5/CMakeLists.txt
@@ -45,7 +45,7 @@ target_link_libraries(rtmath_plugin_hdf5
 	rtmath_hdf5_cpp
 	)
 INSTALL(TARGETS rtmath_plugin_hdf5 
-	LIBRARY DESTINATION ${INSTALL_PLUGIN_DIR} 
-	ARCHIVE DESTINATION ${INSTALL_PLUGIN_DIR} 
+	LIBRARY DESTINATION ${INSTALL_CMAKE_DIR}/${REL_BIN_DIR}/bin${configappend}/plugins
+	ARCHIVE DESTINATION ${INSTALL_CMAKE_DIR}/${REL_BIN_DIR}/bin${configappend}/plugins
 	COMPONENT Plugins)
 
