Slowly working on reimporting ddOutputSingle data from hdf5 files. The ddOutputSingle class is wholly unsuited for data manipulation - it was not really designed for it. Need to: - Provide default values when a new object is constructed. - Entries required to write a file will be generated on-demand. - Finish hdf5 ddOutput to ddOutputSingle routine. - Reenable vector read operation in hdf5 file.
git-svn-id: file:///mnt/svn/rtmath@1424 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/CMakeLists.txt
+++ b/rtmath/rtmath/CMakeLists.txt
@@ -281,7 +281,7 @@ INSTALL(DIRECTORY rtmath
 IF(RTMATH-TESTS)
 # Executables and libraries
 INSTALL(TARGETS rtmath-tests
-	RUNTIME DESTINATION ${INSTALL_BIN_DIR}
+	RUNTIME DESTINATION ${INSTALL_CMAKE_DIR}/${REL_BIN_DIR}/bin${configappend}
 	COMPONENT Tests
 	)
 ENDIF()
@@ -289,9 +289,9 @@ ENDIF()
 INSTALL(TARGETS rtmath_core rtmath_ddscat rtmath_ddscat_base 
 	rtmath_voronoi rtmath_data rtmath_images
 	# rtmath_mie
-	RUNTIME DESTINATION ${INSTALL_BIN_DIR}
-	LIBRARY DESTINATION ${INSTALL_LIB_DIR}
-	ARCHIVE DESTINATION ${INSTALL_LIB_DIR}
+	RUNTIME DESTINATION ${INSTALL_CMAKE_DIR}/${REL_BIN_DIR}/bin${configappend}
+	LIBRARY DESTINATION ${INSTALL_CMAKE_DIR}/${REL_LIB_DIR}/lib${configappend}
+	ARCHIVE DESTINATION ${INSTALL_CMAKE_DIR}/${REL_LIB_DIR}/lib${configappend}
 	COMPONENT Libraries
 	)
 
