Build system updated to build the apps and core dlls in the same directory, to improve ease of debugging. The non-ddscat apps all build properly and link. The ddOutputSingle apps need to be revised. The hdf5 and tsv plugins are the next priority, so that I can again extract and display my data. After this will be a revision of the shape stats code, used for my poster, followed by the tmatrix code tie-in.
git-svn-id: file:///mnt/svn/rtmath@1431 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/CMakeLists.txt
+++ b/rtmath/CMakeLists.txt
@@ -89,6 +89,13 @@ ENDIF()
 add_definitions(-DWITH_CMAKE)
 find_package(Eigen3 REQUIRED)
 include_directories(${EIGEN3_INCLUDE_DIR})
+
+# Set a uniform output directory (to make app debugs easier)
+#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_Debug ${CMAKE_BINARY_DIR}/Debug)
+#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_Release ${CMAKE_BINARY_DIR}/Release)
+#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_MinSizeRel ${CMAKE_BINARY_DIR}/MinSizeRel)
+#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RelWithDebInfo ${CMAKE_BINARY_DIR}/RelWithDebInfo)
+
 # Recurse into the subdirectories
 # add_subdirectory (deps)
 #add_subdirectory (rtmath-libs/rtmath-mie)
