--- a/rtmath/rtmath-apps/combo/CMakeLists.txt
+++ b/rtmath/rtmath-apps/combo/CMakeLists.txt
@@ -1,8 +1,9 @@
 include (common)
+include (commonRtmathApps)
 
 add_executable (rtmath-combo combo2.cpp)
 set_target_properties( rtmath-combo PROPERTIES FOLDER "Apps/Core")
 target_link_libraries(rtmath-combo ${rtmath_core-libs} rtmath_core )
-INSTALL(TARGETS rtmath-combo RUNTIME DESTINATION bin COMPONENT Applications)
+addapp(rtmath-combo Data)
 
 
