--- a/rtmath/rtmath-apps/ddscat-data/CMakeLists.txt
+++ b/rtmath/rtmath-apps/ddscat-data/CMakeLists.txt
@@ -1,11 +1,9 @@
 include (common)
-find_package(Eigen3 REQUIRED)
-include_directories(${EIGEN3_INCLUDE_DIR})
+include (commonRtmathApps)
 
 add_executable (rtmath-ddscat-data data.cpp)
-set_target_properties( rtmath-ddscat-data PROPERTIES FOLDER "Apps/Analysis")
 target_link_libraries(rtmath-ddscat-data ${rtmath_ddscat-libs} rtmath_core rtmath_ddscat)
-INSTALL(TARGETS rtmath-ddscat-data RUNTIME DESTINATION bin COMPONENT Applications)
+addapp(rtmath-ddscat-data Analysis)
 
 
 
