--- a/rtmath/rtmath-apps/expand-shorthand/CMakeLists.txt
+++ b/rtmath/rtmath-apps/expand-shorthand/CMakeLists.txt
@@ -1,9 +1,9 @@
 include (common)
+include (commonRtmathApps)
 
 add_executable (rtmath-expand-shorthand expand.cpp)
-set_target_properties( rtmath-expand-shorthand PROPERTIES FOLDER "Apps/Core")
+addapp( rtmath-expand-shorthand Core)
 target_link_libraries(rtmath-expand-shorthand ${rtmath_core-libs} rtmath_core)
-INSTALL(TARGETS rtmath-expand-shorthand RUNTIME DESTINATION bin COMPONENT Applications)
 
 if(BUILD_TESTING)
 	add_test (paramSet rtmath-expand-shorthand 0)
