--- a/rtmath/rtmath-apps/getm/CMakeLists.txt
+++ b/rtmath/rtmath-apps/getm/CMakeLists.txt
@@ -1,8 +1,8 @@
 include (common)
+include (commonRtmathApps)
 
 add_executable (rtmath-getm getm.cpp)
-set_target_properties( rtmath-getm PROPERTIES FOLDER "Apps/Analysis")
+addapp( rtmath-getm Analysis)
 target_link_libraries(rtmath-getm ${rtmath_ddscat_base-libs} rtmath_core rtmath_ddscat_base)
-INSTALL(TARGETS rtmath-getm RUNTIME DESTINATION bin COMPONENT Applications)
 
 
