--- a/rtmath/rtmath-apps/liu-regenerate-runs/CMakeLists.txt
+++ b/rtmath/rtmath-apps/liu-regenerate-runs/CMakeLists.txt
@@ -1,11 +1,9 @@
 include (common)
-find_package(Eigen3 REQUIRED)
-include_directories(${EIGEN3_INCLUDE_DIR})
+include (commonRtmathApps)
 
 add_executable (rtmath-liu-regenerate-runs main.cpp)
-set_target_properties( rtmath-liu-regenerate-runs PROPERTIES FOLDER "Apps/Analysis")
+addapp( rtmath-liu-regenerate-runs Analysis)
 target_link_libraries(rtmath-liu-regenerate-runs ${rtmath_ddscat-libs} rtmath_core rtmath_ddscat)
-INSTALL(TARGETS rtmath-liu-regenerate-runs RUNTIME DESTINATION bin COMPONENT Applications)
 
 
 
