--- a/rtmath/rtmath-apps/orientation-ensembles/CMakeLists.txt
+++ b/rtmath/rtmath-apps/orientation-ensembles/CMakeLists.txt
@@ -1,11 +1,9 @@
 include (common)
-find_package(Eigen3 REQUIRED)
-include_directories(${EIGEN3_INCLUDE_DIR})
+include (commonRtmathApps)
 
 add_executable (rtmath-orientation-ensembles orientation-ensembles.cpp)
-set_target_properties( rtmath-orientation-ensembles PROPERTIES FOLDER "Apps/Analysis")
+addapp( rtmath-orientation-ensembles Analysis)
 target_link_libraries(rtmath-orientation-ensembles ${rtmath_ddscat-libs} rtmath_core rtmath_ddscat)
-INSTALL(TARGETS rtmath-orientation-ensembles RUNTIME DESTINATION bin COMPONENT Applications)
 
 
 
