--- a/rtmath/rtmath-apps/shape-hash/CMakeLists.txt
+++ b/rtmath/rtmath-apps/shape-hash/CMakeLists.txt
@@ -1,11 +1,9 @@
 include (common)
-find_package(Eigen3 REQUIRED)
-include_directories(${EIGEN3_INCLUDE_DIR})
+include (commonRtmathApps)
 
 add_executable (rtmath-shape-hash shape-hash.cpp)
-set_target_properties( rtmath-shape-hash PROPERTIES FOLDER "Apps/Analysis")
+addapp( rtmath-shape-hash Analysis)
 target_link_libraries(rtmath-shape-hash ${rtmath_ddscat-libs} rtmath_core rtmath_ddscat)
-INSTALL(TARGETS rtmath-shape-hash RUNTIME DESTINATION bin COMPONENT Applications)
 
 
 
