--- a/rtmath/rtmath-apps/arm-sacr/CMakeLists.txt
+++ b/rtmath/rtmath-apps/arm-sacr/CMakeLists.txt
@@ -1,11 +1,9 @@
 include (common)
-find_package(Eigen3 REQUIRED)
-include_directories(${EIGEN3_INCLUDE_DIR})
+include (commonRtmathApps)
 
 add_executable (rtmath-arm-sacr main.cpp)
-set_target_properties( rtmath-arm-sacr PROPERTIES FOLDER "Apps/Data")
 target_link_libraries(rtmath-arm-sacr ${rtmath_data-libs} rtmath_core rtmath_data)
-INSTALL(TARGETS rtmath-arm-sacr RUNTIME DESTINATION bin COMPONENT Applications)
+addapp(rtmath-arm-sacr Data)
 
 #if (BUILD_PLUGIN_IMAGEMAGICK)
 #	add_dependencies ( rtmath-arm-sacr rtmath_plugin_ImageMagick)
