--- a/rtmath/rtmath-apps/comborows/CMakeLists.txt
+++ b/rtmath/rtmath-apps/comborows/CMakeLists.txt
@@ -1,8 +1,8 @@
 include (common)
+include (commonRtmathApps)
 
 add_executable (rtmath-comborows comborows.cpp)
-set_target_properties( rtmath-comborows PROPERTIES FOLDER "Apps/Core")
 target_link_libraries(rtmath-comborows ${rtmath_core-libs} rtmath_core )
-INSTALL(TARGETS rtmath-comborows RUNTIME DESTINATION bin COMPONENT Applications)
+addapp(rtmath-comborows Core)
 
 
