--- a/rtmath/rtmath-apps/ddscat-output-extract-orientations/CMakeLists.txt
+++ b/rtmath/rtmath-apps/ddscat-output-extract-orientations/CMakeLists.txt
@@ -1,11 +1,8 @@
 include (common)
-find_package(Eigen3 REQUIRED)
-include_directories(${EIGEN3_INCLUDE_DIR})
+include (commonRtmathApps)
 
 add_executable (rtmath-ddscat-output-extract-orientations ddscat-output-extract-orientations.cpp)
-set_target_properties( rtmath-ddscat-output-extract-orientations PROPERTIES FOLDER "Apps/Analysis")
 target_link_libraries(rtmath-ddscat-output-extract-orientations ${rtmath_ddscat-libs} rtmath_core rtmath_ddscat)
-INSTALL(TARGETS rtmath-ddscat-output-extract-orientations RUNTIME DESTINATION bin COMPONENT Applications)
-
+addapp(rtmath-ddscat-output-extract-orientations Analysis)
 
 
