--- a/rtmath/rtmath-apps/ddscat-output/CMakeLists.txt
+++ b/rtmath/rtmath-apps/ddscat-output/CMakeLists.txt
@@ -1,11 +1,9 @@
 include (common)
-find_package(Eigen3 REQUIRED)
-include_directories(${EIGEN3_INCLUDE_DIR})
+include (commonRtmathApps)
 
 add_executable (rtmath-ddscat-output ddscat-output.cpp)
-set_target_properties( rtmath-ddscat-output PROPERTIES FOLDER "Apps/Analysis")
 target_link_libraries(rtmath-ddscat-output ${rtmath_ddscat-libs} rtmath_core rtmath_ddscat)
-INSTALL(TARGETS rtmath-ddscat-output RUNTIME DESTINATION bin COMPONENT Applications)
+addapp(rtmath-ddscat-output Analysis)
 
 if (BUILD_PLUGIN_SILO)
 	add_dependencies ( rtmath-ddscat-output rtmath_plugin_silo)
