--- a/rtmath/rtmath-apps/ddscat-postprocess/CMakeLists.txt
+++ b/rtmath/rtmath-apps/ddscat-postprocess/CMakeLists.txt
@@ -1,11 +1,8 @@
 include (common)
-find_package(Eigen3 REQUIRED)
-include_directories(${EIGEN3_INCLUDE_DIR})
+include (commonRtmathApps)
 
 add_executable (rtmath-ddscat-postprocess postprocess.cpp)
-set_target_properties( rtmath-ddscat-postprocess PROPERTIES FOLDER "Apps/Analysis")
 target_link_libraries(rtmath-ddscat-postprocess ${rtmath_ddscat-libs} rtmath_core rtmath_ddscat)
-INSTALL(TARGETS rtmath-ddscat-postprocess RUNTIME DESTINATION bin COMPONENT Applications)
-
+addapp(rtmath-ddscat-postprocess Analysis)
 
 
