--- a/rtmath/rtmath-apps/radar-relations/CMakeLists.txt
+++ b/rtmath/rtmath-apps/radar-relations/CMakeLists.txt
@@ -1,11 +1,9 @@
 include (common)
-find_package(Eigen3 REQUIRED)
-include_directories(${EIGEN3_INCLUDE_DIR})
+include (commonRtmathApps)
 
 add_executable (rtmath-radar-relations radar-relations.cpp)
-set_target_properties( rtmath-radar-relations PROPERTIES FOLDER "Apps/Analysis")
+addapp( rtmath-radar-relations Analysis)
 target_link_libraries(rtmath-radar-relations ${rtmath_ddscat-libs} rtmath_core rtmath_ddscat)
-INSTALL(TARGETS rtmath-radar-relations RUNTIME DESTINATION bin COMPONENT Applications)
 
 if (BUILD_PLUGIN_HDF5)
 	add_dependencies ( rtmath-radar-relations rtmath_plugin_hdf5)
