--- a/rtmath/rtmath-apps/rpline/CMakeLists.txt
+++ b/rtmath/rtmath-apps/rpline/CMakeLists.txt
@@ -1,8 +1,8 @@
 include (common)
+include (commonRtmathApps)
 
 add_executable (rtmath-rpline rpline.cpp)
-set_target_properties( rtmath-rpline PROPERTIES FOLDER "Apps/Core")
+addapp( rtmath-rpline Core)
 target_link_libraries(rtmath-rpline ${rtmath_core-libs} rtmath_core )
-INSTALL(TARGETS rtmath-rpline RUNTIME DESTINATION bin COMPONENT Applications)
 
 
