--- a/rtmath/rtmath-apps/shape/CMakeLists.txt
+++ b/rtmath/rtmath-apps/shape/CMakeLists.txt
@@ -1,11 +1,9 @@
 include (common)
-find_package(Eigen3 REQUIRED)
-include_directories(${EIGEN3_INCLUDE_DIR})
+include (commonRtmathApps)
 
 add_executable (rtmath-shape shape-main.cpp)
-set_target_properties( rtmath-shape PROPERTIES FOLDER "Apps/Shapes")
+addapp( rtmath-shape Shapes)
 target_link_libraries(rtmath-shape ${rtmath_ddscat-libs} rtmath_core rtmath_ddscat)
-INSTALL(TARGETS rtmath-shape RUNTIME DESTINATION bin COMPONENT Applications)
 
 if (BUILD_PLUGIN_SILO)
 	add_dependencies ( rtmath-shape rtmath_plugin_silo)
