hdf5 plugin builds. - Needs some slight modification to incorporate the ddoutput strings and the per-file refractive indices. - Also, the parfile class diels list in ujnviewable by the debugger. Is something wrong here? - fmldata storage after ddOutput::generate needs to be linked (pointer is empty)   - need to call import on the ddOriDatas to the ddOutput class. - Stats pointer will be kept empty, unless asked for. Remove? Or, make sure that hdf code handles it properly as well.
git-svn-id: file:///mnt/svn/rtmath@1432 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/hdf5/CMakeLists.txt
+++ b/rtmath/plugins/hdf5/CMakeLists.txt
@@ -1,4 +1,5 @@
 include (common)
+include (commonRtmathApps)
 find_package(Eigen3 REQUIRED)
 include_directories(${EIGEN3_INCLUDE_DIR})
 
@@ -11,13 +12,13 @@ if(DEFINED HDF5_C_LIBRARIES)
 else()
 	set (h5libs hdf5 hdf5_cpp)
 endif()
-FIND_PACKAGE(SZIP)
+#FIND_PACKAGE(SZIP)
 #	message("${SZIP_INCLUDE_DIRS}")
 #	message("${SZIP_LIBRARIES}")
-IF (DEFINED SZIP_LIBRARIES)
-	include_directories(${SZIP_INCLUDE_DIRS})
-		SET (h5libs ${h5libs} szip)
-ENDIF()
+#IF (DEFINED SZIP_LIBRARIES)
+#	include_directories(${SZIP_INCLUDE_DIRS})
+#		SET (h5libs ${h5libs} szip)
+#ENDIF()
 
 add_subdirectory (../../related/rtmath_hdf5_cpp "${CMAKE_CURRENT_BINARY_DIR}/rtmath_hdf5_cpp")
 
