Builds on linux again. No significant 'bugs'. hdf converter can write ddOutput files, though the files are still larger than expected. Test case: /home/rhoneyager/prolate/regen/active/complete/transferred/regen_dec_none_per_none_36.5_263_base 5.6M    prolate-regen_dec_none_per_none_36.5_263_base-101081-full.hdf5 727M    prolate-regen_dec_none_per_none_36.5_263_base-full.hdf5 625M    prolate-regen_dec_none_per_none_36.5_263_base-ori.hdf5 2.9G    regen_dec_none_per_none_36.5_263_base 290M    regen_dec_none_per_none_36.5_263_base_rosette.tar.bz2
git-svn-id: file:///mnt/svn/rtmath@1438 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/CMakeLists.txt
+++ b/rtmath/rtmath/CMakeLists.txt
@@ -256,9 +256,9 @@ if (BUILD_TESTING)
 	storebin(rtmath_ddscat_tests)
 
 IF(DEFINED COMMON_CFLAGS )
-	set_target_properties(rtmath_core_tests PROPERTIES COMPILE_FLAGS ${COMMON_CFLAGS})
+	#set_target_properties(rtmath_core_tests PROPERTIES COMPILE_FLAGS ${COMMON_CFLAGS})
 	#set_target_properties(rtmath_mie_tests PROPERTIES COMPILE_FLAGS ${COMMON_CFLAGS})
-	set_target_properties(rtmath_ddscat_tests PROPERTIES COMPILE_FLAGS ${COMMON_CFLAGS})
+	#set_target_properties(rtmath_ddscat_tests PROPERTIES COMPILE_FLAGS ${COMMON_CFLAGS})
 endif()
 set_target_properties( rtmath_core_tests PROPERTIES FOLDER "Tests")
 #target_link_libraries(rtmath_core_tests ${rtmath_core-libs} rtmath_core ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
