--- a/rtmath/CMakeLists.txt
+++ b/rtmath/CMakeLists.txt
@@ -73,9 +73,10 @@ IF(USE_OPENMP AND OPENMP_FOUND)
 ENDIF()
 # Enable C++11
 # g++
-IF(CMAKE_COMPILER_IS_GNUCXX)
-	SET (COMMON_CFLAGS ${COMMON_CFLAGS} -std=c++11)
-ENDIF()
+if(CMAKE_COMPILER_IS_GNUCXX)
+	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+endif()
+
 IF(MSVC)
 	# MSVC parallel builds by default
 	if ("${COMMON_CFLAGS}" MATCHES "MP")
