- Code now finds plugins properly on linux - hdf5 write works fully. shape writes are now compressed, and do not write unessential fields. - modulefile fives full paths again - apps install in proper directory - ddscat-output gives option to not write shapes (will save hapes in separate step) - hdf5 run results are not their appropriate size
git-svn-id: file:///mnt/svn/rtmath@1441 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/hdf5/CMakeLists.txt
+++ b/rtmath/plugins/hdf5/CMakeLists.txt
@@ -46,7 +46,7 @@ target_link_libraries(rtmath_plugin_hdf5
 	rtmath_hdf5_cpp
 	)
 INSTALL(TARGETS rtmath_plugin_hdf5 
-	LIBRARY DESTINATION ${INSTALL_CMAKE_DIR}/${REL_BIN_DIR}/bin${configappend}/plugins
-	ARCHIVE DESTINATION ${INSTALL_CMAKE_DIR}/${REL_BIN_DIR}/bin${configappend}/plugins
+	LIBRARY DESTINATION ${INSTALL_CMAKE_DIR}/${REL_LIB_DIR}/lib${configappend}/plugins
+	ARCHIVE DESTINATION ${INSTALL_CMAKE_DIR}/${REL_LIB_DIR}/lib${configappend}/plugins
 	COMPONENT Plugins)
 
