--- a/rtmath/related/rtmath_hdf5_cpp/CMakeLists.txt
+++ b/rtmath/related/rtmath_hdf5_cpp/CMakeLists.txt
@@ -37,7 +37,7 @@ set_target_properties( rtmath_hdf5_cpp PROPERTIES FOLDER "Related")
 target_link_libraries(rtmath_hdf5_cpp ${h5libs} ${libs})
 
 INSTALL(TARGETS rtmath_hdf5_cpp
-	LIBRARY DESTINATION ${INSTALL_CMAKE_DIR}/${REL_BIN_DIR}/bin${configappend}/plugins
-	ARCHIVE DESTINATION ${INSTALL_CMAKE_DIR}/${REL_BIN_DIR}/bin${configappend}/plugins
+	LIBRARY DESTINATION ${INSTALL_CMAKE_DIR}/${REL_LIB_DIR}/lib${configappend}/plugins
+	ARCHIVE DESTINATION ${INSTALL_CMAKE_DIR}/${REL_LIB_DIR}/lib${configappend}/plugins
 	COMPONENT Plugins)
 
