Added ddscat-output-ingest, designed to make the hdf5 conversion easier.
git-svn-id: file:///mnt/svn/rtmath@1443 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -29,6 +29,7 @@ addappdir(ddscat-generate-ellipsoid ON)
 addappdir(ddscat-output ON)
 addappdir(ddscat-output-extract ON)
 addappdir(ddscat-output-extract-orientations ON)
+addappdir(ddscat-output-ingest ON)
 addappdir(ddscat-postprocess ON)
 addappdir(ddscat-regenerate-run ON)
 addappdir(ddscat-test ON)
