--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -35,6 +35,7 @@ addappdir(ddscat-regenerate-run ON)
 addappdir(ddscat-test ON)
 addappdir(expand-shorthand ON)
 addappdir(getm ON)
+addappdir(guess-temp ON)
 addappdir(image-basic ON)
 addappdir(liu-regenerate-runs ON)
 #addappdir(mie-onesphere ON)
