Vector read for shapefiles work. Added ddOutput hdf5 read functions, including vector read, but these are untested. Also, updated rtmath-ddscat-output to use vector reads for input, enabling hdf5 reading of all contained runs. As such, further hdf5 read functions were added to rtmath_hdf5_cpp. Finally, hdf5 plugin build location updated (like the apps and the core libs). It now has a standardized macro.
git-svn-id: file:///mnt/svn/rtmath@1446 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/hdf5/CMakeLists.txt
+++ b/rtmath/plugins/hdf5/CMakeLists.txt
@@ -39,7 +39,6 @@ add_library (rtmath_plugin_hdf5 SHARED
 	)
 addlib(rtmath_plugin_hdf5 SHARED)
 
-set_target_properties( rtmath_plugin_hdf5 PROPERTIES FOLDER "Plugins/ddscat")
 target_link_libraries(rtmath_plugin_hdf5 
 	${rtmath_ddscat-libs} rtmath_core rtmath_ddscat
 	${h5libs}
@@ -49,4 +48,5 @@ INSTALL(TARGETS rtmath_plugin_hdf5
 	LIBRARY DESTINATION ${INSTALL_CMAKE_DIR}/${REL_LIB_DIR}/lib${configappend}/plugins
 	ARCHIVE DESTINATION ${INSTALL_CMAKE_DIR}/${REL_LIB_DIR}/lib${configappend}/plugins
 	COMPONENT Plugins)
+addplugin(rtmath_plugin_hdf5 io)
 
