--- a/rtmath/related/rtmath_hdf5_cpp/CMakeLists.txt
+++ b/rtmath/related/rtmath_hdf5_cpp/CMakeLists.txt
@@ -32,7 +32,10 @@ add_library (rtmath_hdf5_cpp STATIC
 	export-hdf5.cpp
 	export-hdf5.h
 	)
-add_definitions(-fPIC)
+if(WIN32 AND NOT CYGWIN)
+else()
+	add_definitions(-fPIC)
+endif()
 set_target_properties( rtmath_hdf5_cpp PROPERTIES FOLDER "Related")
 target_link_libraries(rtmath_hdf5_cpp ${h5libs} ${libs})
 
