Added voronoi app to manipulate voronoi diagrams.
Voronoi storage works properly. Need to implement read - think of ways to decrease size in the future.


git-svn-id: file:///mnt/svn/rtmath@1454 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -61,6 +61,7 @@ addappdir(shape-rehash ON)
 #addappdir(tmatrix-optimize-with-ddscat OFF)
 #addappdir(tmatrix-slice ON)
 addappdir(visualize-orientation-weights OFF)
+addappdir(voronoi ON)
 
 #add_subdirectory (da)
 #add_subdirectory (db-catalog-ddscat)
