Voronoi reads work! Tested both reading a file directly and storing / loading a hash using the hash system. Also tested reading a shape file, calculating the hash, and then performing a hash-based lookup.
Next:
- shape statistice redo + loading + writing
- silo plugin revisions
- tsv export revisions
- Redo ddOutput ensemble functions
- Particle size distribution support
- Per-size orientation distribution support
- Redo radar-relations app to support all of this and extract data
- Export all shape data with stats


git-svn-id: file:///mnt/svn/rtmath@1456 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/hdf5/CMakeLists.txt
+++ b/rtmath/plugins/hdf5/CMakeLists.txt
@@ -36,6 +36,7 @@ add_library (rtmath_plugin_hdf5 SHARED
 	hdf5-shapefile-read.cpp
 	hdf5-shapestats.cpp
 	hdf5-voronoi.cpp
+	hdf5-voronoi-read.cpp
 	)
 addlib(rtmath_plugin_hdf5 SHARED)
 
