shapestats write, and fixed bug with volume fraction calculation. Added ingest tagging support and a stats application to do stats processing.
- Silo is next
- May use a script to generate images of each flake, which will be imported into hdf5 image cache files for three viewing directions.

git-svn-id: file:///mnt/svn/rtmath@1457 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -56,6 +56,7 @@ addappdir(shape-hash ON)
 addappdir(shape-hull ON)
 addappdir(shape-perturb-interior ON)
 addappdir(shape-rehash ON)
+addappdir(stats ON)
 #addappdir(tmatrix-ddscat-extract ON)
 #addappdir(tmatrix-oneellip ON)
 #addappdir(tmatrix-optimize-with-ddscat OFF)
