silo code again builds. need to add code to create a 3d mesh, embedding the dielectric information. This way, the actual shape can be contoured using another method.
git-svn-id: file:///mnt/svn/rtmath@1458 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/silo/CMakeLists.txt
+++ b/rtmath/plugins/silo/CMakeLists.txt
@@ -1,25 +1,26 @@
 include (common)
+include (commonRtmathApps)
 find_package(Eigen3 REQUIRED)
 include_directories(${EIGEN3_INCLUDE_DIR})
 
 find_package(silo REQUIRED)
 include_directories(${SILO_INCLUDE_DIRS})
-#find_package(netCDF REQUIRED)
-#include_directories(${NetCDF_INCLUDE_DIRS})
-find_package(HDF5 COMPONENTS C)
-if (HDF5_FOUND)
-include_directories(${HDF5_INCLUDE_DIRS})
+find_package(HDF5 COMPONENTS C CXX REQUIRED)
+include_directories(${HDF5_INCLUDE_DIRS} ${HDF5_INCLUDE_DIR_CPP})
 add_definitions(${HDF5_DEFINITIONS})
+
+if(DEFINED HDF5_C_LIBRARIES)
+	set (h5libs ${HDF5_C_LIBRARIES} ${HDF5_CXX_LIBRARIES})
+else()
+	set (h5libs hdf5 hdf5_cpp)
 endif()
-#find_package(ZLIB REQUIRED)
-#include_directories(${ZLIB_INCLUDE_DIRS})
-#find_package(SZIP REQUIRED)
+include_directories("${CMAKE_CURRENT_BINARY_DIR}/../../rtmath")
 
 add_library (rtmath_plugin_silo SHARED 
 	plugin-silo.cpp
 	plugin-silo.h
 	silo-shapefile.cpp
-	silo-ddOutput.cpp
+	#silo-ddOutput.cpp
 	silo-voronoi.cpp
 	#CurveMesh3d.cpp
 	#CurveMesh3d.h
@@ -35,10 +36,6 @@ add_library (rtmath_plugin_silo SHARED
 	)
 addlib(rtmath_plugin_silo SHARED)
 
-set_target_properties( rtmath_plugin_silo PROPERTIES FOLDER "Plugins/Shapes")
 target_link_libraries(rtmath_plugin_silo ${rtmath_ddscat-libs} rtmath_core rtmath_ddscat silo)
-INSTALL(TARGETS rtmath_plugin_silo 
-	LIBRARY DESTINATION ${INSTALL_PLUGIN_DIR} 
-	ARCHIVE DESTINATION ${INSTALL_PLUGIN_DIR} 
-	COMPONENT Plugins)
+addplugin(rtmath_plugin_silo export)
 
