Batch visualizer made to use less memory.
git-svn-id: file:///mnt/svn/rtmath@1461 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -63,6 +63,7 @@ addappdir(stats ON)
 #addappdir(tmatrix-slice ON)
 addappdir(visualize-orientation-weights OFF)
 addappdir(visualize-shape-batch OFF)
+addappdir(visualize-shape-batch-fast OFF)
 addappdir(voronoi ON)
 
 #add_subdirectory (da)
