stats almost read right. vectorize/devectorize produces inconsistent output.
git-svn-id: file:///mnt/svn/rtmath@1467 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/hdf5/CMakeLists.txt
+++ b/rtmath/plugins/hdf5/CMakeLists.txt
@@ -35,6 +35,7 @@ add_library (rtmath_plugin_hdf5 SHARED
 	hdf5-shapefile.cpp
 	hdf5-shapefile-read.cpp
 	hdf5-shapestats.cpp
+	hdf5-shapestats-read.cpp
 	hdf5-voronoi.cpp
 	hdf5-voronoi-read.cpp
 	)
