git-svn-id: file:///mnt/svn/rtmath@1470 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/CMakeLists.txt
+++ b/rtmath/CMakeLists.txt
@@ -30,7 +30,7 @@ set(MAJOR 0)
 set(MINOR 3)
 set(REVISION 0)
 set(RTMATH_VERSION
-	${MAJOR}.${MINOR}.${REVISION} )
+	${MAJOR}.${MINOR}.${REVISION}.${SVNREVISION} )
 
 
 addBaseProject()
