--- a/rtmath/rtmath/rtmath/cmake-settings.h.in
+++ b/rtmath/rtmath/rtmath/cmake-settings.h.in
@@ -9,3 +9,8 @@
 
 #define COMPRESS_SZIP @COMPRESS_SZIP@
 
+#define RTMATH_MAJOR @MAJOR@
+#define RTMATH_MINOR @MINOR@
+#define RTMATH_REVISION @REVISION@
+#define RTMATH_SVNREVISION @SVNREVISION@
+
