Final component for analysis: selective averaging over various rotation coordinates. Will be implemented tomorrow, after which I'll finish the tsv extractors and plot resulting data. - Also, remember to correct weights for full average case (where the weights do not sum to 1, add a fudge factor for scaling).
git-svn-id: file:///mnt/svn/rtmath@1481 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/tsv-export/CMakeLists.txt
+++ b/rtmath/plugins/tsv-export/CMakeLists.txt
@@ -1,10 +1,7 @@
 include (common)
+include (commonRtmathApps)
 find_package(Eigen3 REQUIRED)
 include_directories(${EIGEN3_INCLUDE_DIR})
-
-#find_package(ZLIB REQUIRED)
-#include_directories(${ZLIB_INCLUDE_DIRS})
-#find_package(SZIP REQUIRED)
 
 add_library (rtmath_plugin_tsv SHARED 
 	plugin-tsv.cpp
@@ -20,10 +17,7 @@ add_library (rtmath_plugin_tsv SHARED
 	)
 addlib(rtmath_plugin_tsv SHARED)
 
-set_target_properties( rtmath_plugin_tsv PROPERTIES FOLDER "Plugins/Shapes")
-target_link_libraries(rtmath_plugin_tsv ${rtmath_images-libs} rtmath_images ${rtmath_ddscat-libs} rtmath_core rtmath_ddscat ${ROOT_LIBRARIES})
-INSTALL(TARGETS rtmath_plugin_tsv 
-	LIBRARY DESTINATION ${INSTALL_PLUGIN_DIR} 
-	ARCHIVE DESTINATION ${INSTALL_PLUGIN_DIR} 
-	COMPONENT Plugins)
+addplugin(rtmath_plugin_tsv export)
+
+target_link_libraries(rtmath_plugin_tsv ${rtmath_images-libs} rtmath_images ${rtmath_ddscat-libs} rtmath_core rtmath_ddscat)
 
