- Added avg entry back to ddoutput.  - Updated hdf5 code  - hdf5 code now has make_plist as a mainline function - Finished total weighting function, which also scales based on cdf correction. - voronoi-main.cpp can now read hashes from ddscat runs.
TODOs:
- test avg read and write
- import initial holly data (adjust ddscat-output program to again allow paired shape and .avg file ingest)
- redo tsv export
- add getReferencedHashes function to extract all mentioned hashes in an hdf5 file
  this includes all hashes entries in the tree, all ddoutput shapehash listings, all stats, 
  voronoi diagrams and actual shapes. This will go far in improving code readability
- add a currently-loaded hdf5 file as a temporary hashed object source
- ddscat-output program needs option to patch shapefiles with more perturbation information
- target.out detection and relabeling (implement in ddscat-output)
- re-add tmatrix code (thoigh the poster data is already generated)
- perturbed shape / initial shape matching
- orientation 3d flake visualization


git-svn-id: file:///mnt/svn/rtmath@1483 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/related/rtmath_hdf5_cpp/CMakeLists.txt
+++ b/rtmath/related/rtmath_hdf5_cpp/CMakeLists.txt
@@ -28,6 +28,9 @@ IF (DEFINED SZIP_LIBRARIES)
 		SET (h5libs ${h5libs} szip)
 ENDIF()
 
+
+include_directories("${CMAKE_CURRENT_BINARY_DIR}/../../../rtmath")
+
 add_library (rtmath_hdf5_cpp STATIC
 	export-hdf5.cpp
 	export-hdf5.h
