tsv write for extracted data surprisingly works without error. however, I need to check the averaged results. - also need to redo the orientation extractor.
git-svn-id: file:///mnt/svn/rtmath@1489 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/tsv-export/CMakeLists.txt
+++ b/rtmath/plugins/tsv-export/CMakeLists.txt
@@ -8,7 +8,7 @@ add_library (rtmath_plugin_tsv SHARED
 	plugin-tsv.h
 	tsv-ddoutput.cpp
 	tsv-ddoutput-iso.cpp
-	tsv-ddoutput-ori.cpp
+	#tsv-ddoutput-ori.cpp
 	tsv-image-basicstats.cpp
 	tsv-sacr.cpp
 	tsv-shapestats.cpp
